tests/integration/snapshots/integration__conformance__n_object_non_string_key_but_huge_number_instead.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
{9999E9999:1}
stderr ---
error: expected entry or closed delimiter `}`, found `9999E9999`
 --> stdin:1:2
  |
1 | {9999E9999:1}
  | -^^^^^^^^^
  | |
  | expected due to `{`
